--- a/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
@@ -2866,7 +2866,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="홍길동님은 총 50000개의 하트를 모았어요!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJu-ah-Jcb">
-                            <rect key="frame" x="0.0" y="831" width="768" height="14"/>
+                            <rect key="frame" x="0.0" y="831" width="768" height="13.333333333333371"/>
                             <fontDescription key="fontDescription" name="NanumSquareB" family="NanumSquare" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -3115,23 +3115,23 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="th2-dm-1wh">
-                                                <rect key="frame" x="0.0" y="138" width="768" height="480"/>
+                                                <rect key="frame" x="0.0" y="138" width="768" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문장분석" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jgf-hv-vqk">
-                                                        <rect key="frame" x="20" y="12" width="90" height="36"/>
+                                                        <rect key="frame" x="0.0" y="12" width="90" height="36"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="90" id="0it-12-fRI"/>
                                                             <constraint firstAttribute="height" constant="36" id="XET-Qt-Xax"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="10"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SUp-E4-ma6">
-                                                        <rect key="frame" x="0.0" y="64" width="768" height="420"/>
+                                                    <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SUp-E4-ma6">
+                                                        <rect key="frame" x="0.0" y="64" width="768" height="50"/>
                                                         <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="420" id="LeP-tx-xdh"/>
+                                                            <constraint firstAttribute="height" constant="50" id="LeP-tx-xdh"/>
                                                         </constraints>
                                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="20" id="8s9-CT-0Mh">
                                                             <size key="itemSize" width="270" height="377"/>
@@ -3141,7 +3141,7 @@
                                                         </collectionViewFlowLayout>
                                                         <cells>
                                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="cell" id="hfn-df-zRE" customClass="AnalyzeCollectionViewCell" customModule="AI_MUNJANG" customModuleProvider="target">
-                                                                <rect key="frame" x="12" y="5" width="270" height="400"/>
+                                                                <rect key="frame" x="12" y="-180" width="270" height="400"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jYS-mT-LAH">
                                                                     <rect key="frame" x="0.0" y="0.0" width="270" height="400"/>
@@ -3515,7 +3515,7 @@
                                                         </cells>
                                                     </collectionView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neb-Pl-9GJ">
-                                                        <rect key="frame" x="118" y="12" width="100" height="36"/>
+                                                        <rect key="frame" x="210" y="12" width="100" height="36"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="36" id="3hq-rV-vhg"/>
                                                             <constraint firstAttribute="width" constant="100" id="87U-Bj-EXC"/>
@@ -3530,7 +3530,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzQ-i3-wo7">
-                                                        <rect key="frame" x="234" y="12" width="100" height="36"/>
+                                                        <rect key="frame" x="326" y="12" width="100" height="36"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="36" id="5xY-oZ-lIz"/>
                                                             <constraint firstAttribute="width" constant="100" id="lFl-2M-fy4"/>
@@ -3545,7 +3545,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8x9-WF-ZQL">
-                                                        <rect key="frame" x="350" y="12" width="100" height="36"/>
+                                                        <rect key="frame" x="442" y="12" width="100" height="36"/>
                                                         <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="10"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <state key="normal" title="문장지수">
@@ -3559,13 +3559,13 @@
                                                 <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="SUp-E4-ma6" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" id="2Nj-Ey-JaI"/>
-                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" constant="20" symbolic="YES" id="3ZT-rI-Kwc"/>
-                                                    <constraint firstItem="neb-Pl-9GJ" firstAttribute="leading" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="8" id="3x0-s9-MuW"/>
+                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" id="3ZT-rI-Kwc"/>
+                                                    <constraint firstItem="neb-Pl-9GJ" firstAttribute="leading" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="120" id="3x0-s9-MuW"/>
                                                     <constraint firstItem="8x9-WF-ZQL" firstAttribute="width" secondItem="UzQ-i3-wo7" secondAttribute="width" id="8o4-RX-Zi3"/>
                                                     <constraint firstItem="8x9-WF-ZQL" firstAttribute="height" secondItem="UzQ-i3-wo7" secondAttribute="height" id="B2l-pz-HWS"/>
                                                     <constraint firstItem="Jgf-hv-vqk" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="top" constant="12" id="CRQ-3Q-7Xh"/>
                                                     <constraint firstItem="Jgf-hv-vqk" firstAttribute="top" secondItem="neb-Pl-9GJ" secondAttribute="top" id="Iii-aU-cn4"/>
-                                                    <constraint firstAttribute="height" constant="480" id="Jes-i3-Mte"/>
+                                                    <constraint firstAttribute="height" constant="50" id="Jes-i3-Mte"/>
                                                     <constraint firstItem="8x9-WF-ZQL" firstAttribute="top" secondItem="UzQ-i3-wo7" secondAttribute="top" id="Ri4-60-F6N"/>
                                                     <constraint firstItem="SUp-E4-ma6" firstAttribute="top" secondItem="Jgf-hv-vqk" secondAttribute="bottom" constant="16" id="WBC-Ga-02K"/>
                                                     <constraint firstItem="8x9-WF-ZQL" firstAttribute="leading" secondItem="UzQ-i3-wo7" secondAttribute="trailing" constant="16" id="WOt-or-tzO"/>
@@ -3576,19 +3576,19 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국어사전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1v-wZ-f4g">
-                                                <rect key="frame" x="20" y="627" width="38.5" height="13.5"/>
+                                                <rect key="frame" x="20" y="257" width="38.5" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="단어를 눌러 뜻을 확인해보세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTS-7d-Uvz">
-                                                <rect key="frame" x="20" y="644.5" width="124.5" height="12"/>
+                                                <rect key="frame" x="20" y="274.5" width="124.5" height="12"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                 <color key="textColor" red="0.63137254901960782" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iDb-Wf-qWb" userLabel="wordCollectionView" customClass="WordCollectionView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="672.5" width="768" height="292.5"/>
+                                                <rect key="frame" x="0.0" y="302.5" width="768" height="662.5"/>
                                                 <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="250" constant="100" id="erZ-PJ-ONj"/>
