단문분할 나오지 않게끔 코드 수정 2차

--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -1836,12 +1836,12 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gFU-dF-jXF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <view contentMode="scaleToFill" id="U45-2B-46D">
+                <view contentMode="scaleToFill" ambiguous="YES" id="U45-2B-46D">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해학습 동영상" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2P-pU-2NV">
-                            <rect key="frame" x="132" y="94" width="150" height="31"/>
+                            <rect key="frame" x="120" y="94" width="150" height="31"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="37F-Wd-3YX"/>
                                 <constraint firstAttribute="height" constant="31" id="RUp-F7-QJE"/>
@@ -1851,7 +1851,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해 멘토 학습 가이드" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zte-Do-zxM">
-                            <rect key="frame" x="33.666666666666657" y="142" width="348" height="24"/>
+                            <rect key="frame" x="33.666666666666657" y="142" width="324" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="Set-a5-PhU"/>
                                 <constraint firstAttribute="width" constant="324" id="SvU-E3-e2n"/>
@@ -1861,7 +1861,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f2u-38-Jle">
-                            <rect key="frame" x="360" y="0.0" width="34" height="34"/>
+                            <rect key="frame" x="336" y="0.0" width="34" height="34"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="34" id="cu1-gg-349"/>
                                 <constraint firstAttribute="width" constant="34" id="p8h-JZ-gkJ"/>
@@ -1874,7 +1874,7 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="illust" translatesAutoresizingMaskIntoConstraints="NO" id="6BN-rP-KQj">
-                            <rect key="frame" x="81" y="230" width="254" height="230"/>
+                            <rect key="frame" x="81" y="230" width="230" height="230"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="230" id="7nQ-6y-2Ef"/>
                                 <constraint firstAttribute="height" constant="230" id="zdL-FJ-5z4"/>
@@ -5663,12 +5663,12 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ojh-df-D2f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <view contentMode="scaleToFill" id="abr-ub-bIM">
+                <view contentMode="scaleToFill" ambiguous="YES" id="abr-ub-bIM">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해학습 동영상" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sj1-Qg-3E1">
-                            <rect key="frame" x="132" y="94" width="150" height="31"/>
+                            <rect key="frame" x="120" y="94" width="150" height="31"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="MpN-gy-xfP"/>
                                 <constraint firstAttribute="height" constant="31" id="soz-Zv-zlJ"/>
@@ -5678,7 +5678,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해 멘토 학습 가이드" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8LG-hJ-Mzl">
-                            <rect key="frame" x="33.666666666666657" y="142" width="348" height="24"/>
+                            <rect key="frame" x="33.666666666666657" y="142" width="324" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="ABd-on-whR"/>
                                 <constraint firstAttribute="width" constant="324" id="z3W-wb-YUR"/>
@@ -5688,7 +5688,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFC-Au-YDW">
-                            <rect key="frame" x="360" y="0.0" width="34" height="34"/>
+                            <rect key="frame" x="336" y="0.0" width="34" height="34"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="34" id="oEv-kD-Shp"/>
                                 <constraint firstAttribute="height" constant="34" id="slV-LM-Qsa"/>
@@ -5701,7 +5701,7 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="illust" translatesAutoresizingMaskIntoConstraints="NO" id="Gn6-Qq-0tK">
-                            <rect key="frame" x="81" y="230" width="254" height="230"/>
+                            <rect key="frame" x="81" y="230" width="230" height="230"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="230" id="ujG-2I-UXf"/>
                                 <constraint firstAttribute="width" constant="230" id="zXQ-4q-Ck3"/>
@@ -5838,12 +5838,12 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6d8-05-DTl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <view contentMode="scaleToFill" ambiguous="YES" id="bwd-no-ZlX">
+                <view contentMode="scaleToFill" id="bwd-no-ZlX">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해학습 동영상" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gO-hQ-O7Q">
-                            <rect key="frame" x="120" y="94" width="150" height="31"/>
+                            <rect key="frame" x="132" y="94" width="150" height="31"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="Lwj-da-fMd"/>
                                 <constraint firstAttribute="height" constant="31" id="f34-S5-8MR"/>
@@ -5853,7 +5853,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해 멘토 학습 가이드" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0d-FG-J7q">
-                            <rect key="frame" x="33.666666666666657" y="142" width="324" height="24"/>
+                            <rect key="frame" x="33.666666666666657" y="142" width="348" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="Fta-xM-czA"/>
                                 <constraint firstAttribute="width" constant="324" id="sGe-Iy-aTe"/>
@@ -5863,7 +5863,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BAr-9q-5wb">
-                            <rect key="frame" x="336" y="0.0" width="34" height="34"/>
+                            <rect key="frame" x="360" y="0.0" width="34" height="34"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="34" id="96H-u9-A1s"/>
                                 <constraint firstAttribute="width" constant="34" id="TUd-0b-UNv"/>
@@ -5876,7 +5876,7 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="illust" translatesAutoresizingMaskIntoConstraints="NO" id="N5m-AH-OLd">
-                            <rect key="frame" x="81" y="230" width="230" height="230"/>
+                            <rect key="frame" x="81" y="230" width="254" height="230"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="230" id="ZW2-C9-Dvr"/>
                                 <constraint firstAttribute="height" constant="230" id="xzu-rW-vig"/>
